Build & Packaging: Consolidate thin jar generation. Fix large jar issue for worker and featured-apps. Cleanup duplicate package-info. Document packaging process.